--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 - Faire qu on puisse choisir l entre et la sortie du lab.
 - Faire un truc de serialisation pour eviter de reparse chaque fois .. genre une option keepload.
 - Tester avec un 2 - 2
+- check le \n en fin de lab
