--- a/TODO
+++ b/TODO
@@ -12,3 +12,6 @@ X meilleur nom a AMaze ... genre MazeAnalyst
 X passer les header en .HPP
 - % de twists etc etc ..
 - Calculateur de complexite
+- Les imperfects doivent ils etre forcement solvables pour etre imperfect ?
+- Attention a si les mecs font pas un lab geantissime
+- Faire l algo de bash
